--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,33 @@
 {
   "login": "Login",
   "register": "Register",
-  "no_account": "Don't have an account?"
+  "no_account": "Don't have an account?",
+  "home": "Home",
+  "email_placeholder": "Email",
+  "password_placeholder": "Password",
+  "forgot_password": "Forgot password?",
+  "or": "Or",
+  "success_login": "Login successful!",
+  "fail_login": "Login failed.",
+  "enter_email": "Please enter your email",
+  "send_request": "Send request",
+  "enter_otp": "Enter OTP",
+  "otp_instruction": "Please enter the 6-digit OTP sent to your email",
+  "confirm_otp": "Confirm OTP",
+  "resend_after": "Resend after {{count}}s",
+  "resend": "Resend",
+  "slogan": "Effective solution for your agricultural products",
+  "copyright": "@2025 copyright by Green supply",
+  "not_receive_code": "Not receive code?",
+  "login_success": "Login successful!",
+  "login_fail": "Login failed.",
+  "login_retry": "Login unsuccessful, please try again later.",
+  "otp_sent": "OTP has been sent!",
+  "invalid_otp": "Please enter a valid OTP before continuing.",
+  "otp_verified": "OTP verified successfully.",
+  "password_updated": "Password has been updated successfully!",
+  "error_generic": "An error occurred, please try again later.",
+  "something_wrong": "Something went wrong. Please try again.",
+  "login_with_google": "Login with Google",
+  "google_locale": "en"
 }
