--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1,6 +1,33 @@
 {
   "login": "Đăng nhập",
   "register": "Đăng ký",
-  "no_account": "Bạn chưa có tài khoản?"
-
+  "no_account": "Bạn chưa có tài khoản?",
+  "home": "Trang chủ",
+  "email_placeholder": "Email",
+  "password_placeholder": "Mật khẩu",
+  "forgot_password": "Quên mật khẩu ?",
+  "or": "Hoặc",
+  "success_login": "Đăng nhập thành công!",
+  "fail_login": "Đăng nhập thất bại.",
+  "enter_email": "Vui lòng nhập email của bạn",
+  "send_request": "Gửi yêu cầu",
+  "enter_otp": "Nhập mã OTP",
+  "otp_instruction": "Vui lòng nhập mã OTP gồm 6 chữ số được gửi đến email của bạn",
+  "confirm_otp": "Xác nhận OTP",
+  "resend_after": "Gửi lại sau {{count}}s",
+  "resend": "Gửi lại",
+  "slogan": "Giải pháp hiệu quả dành cho nông sản của bạn",
+  "copyright": "@2025 bản quyền thuộc về Green supply",
+  "not_receive_code": "Không nhận được mã?",
+  "login_success": "Đăng nhập thành công!",
+  "login_fail": "Đăng nhập thất bại.",
+  "login_retry": "Đăng nhập không thành công, hãy thử lại sau.",
+  "otp_sent": "OTP đã được gửi!",
+  "invalid_otp": "Vui lòng nhập mã OTP hợp lệ trước khi tiếp tục.",
+  "otp_verified": "Xác minh mã otp thành công.",
+  "password_updated": "Mật khẩu đã được cập nhật thành công!",
+  "error_generic": "Có lỗi xảy ra, vui lòng thử lại sau.",
+  "something_wrong": "Đã xảy ra lỗi. Vui lòng thử lại.",
+  "login_with_google": "Đăng nhập bằng Google",
+  "google_locale": "vi"
 }
