--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -23,11 +23,35 @@
   "login_fail": "Login failed.",
   "login_retry": "Login unsuccessful, please try again later.",
   "otp_sent": "OTP has been sent!",
+  "otp_cant_sent": "Cannot send otp!",
   "invalid_otp": "Please enter a valid OTP before continuing.",
   "otp_verified": "OTP verified successfully.",
   "password_updated": "Password has been updated successfully!",
   "error_generic": "An error occurred, please try again later.",
   "something_wrong": "Something went wrong. Please try again.",
   "login_with_google": "Login with Google",
-  "google_locale": "en"
+  "google_locale": "en",
+  "name_placeholder": "Your name",
+  "confirm_password_placeholder": "Confirm password",
+  "phone_placeholder": "Phone number",
+  "gender": "Gender",
+  "male": "Male",
+  "female": "Female",
+  "other": "Other",
+  "birthday": "Birthday",
+  "supplier_check": "Check here if you're a supplier",
+  "already_have_account": "Already have an account",
+  "otp_input_title": "Enter OTP",
+  "otp_input_instruction": "Please enter the 6-digit OTP sent to your email",
+  "resend_otp": "Resend",
+  "resend_otp_after": "Resend after {{count}}s",
+  "register_success": "Account created successfully!",
+  "invalid_phone": "Invalid phone number.",
+  "invalid_password_length": "Password must be at least 6 characters.",
+  "password_mismatch": "Passwords do not match.",
+  "invalid_dob": "Birth date cannot be in the future.",
+  "back": "Back",
+  "update_profile": "Update Profile",
+  "complete": "Complete",
+  "birthday_required": "Please select your birth date."
 }
