--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -23,11 +23,32 @@
   "login_fail": "Đăng nhập thất bại.",
   "login_retry": "Đăng nhập không thành công, hãy thử lại sau.",
   "otp_sent": "OTP đã được gửi!",
+  "otp_cant_sent": "Không thể gửi OTP!",
   "invalid_otp": "Vui lòng nhập mã OTP hợp lệ trước khi tiếp tục.",
   "otp_verified": "Xác minh mã otp thành công.",
   "password_updated": "Mật khẩu đã được cập nhật thành công!",
   "error_generic": "Có lỗi xảy ra, vui lòng thử lại sau.",
   "something_wrong": "Đã xảy ra lỗi. Vui lòng thử lại.",
   "login_with_google": "Đăng nhập bằng Google",
-  "google_locale": "vi"
+  "google_locale": "vi",
+  "name_placeholder": "Tên của bạn",
+  "confirm_password_placeholder": "Xác thực mật khẩu",
+  "phone_placeholder": "Số điện thoại",
+  "gender": "Giới tính",
+  "male": "Nam",
+  "female": "Nữ",
+  "other": "Khác",
+  "birthday": "Ngày sinh",
+  "supplier_check": "Nhấn vào đây nếu bạn là nhà cung ứng",
+  "already_have_account": "Bạn đã có tài khoản",
+  "resend_otp": "Gửi lại",
+  "register_success": "Tạo tài khoản thành công!",
+  "invalid_phone": "Số điện thoại không hợp lệ.",
+  "invalid_password_length": "Mật khẩu phải có ít nhất 6 ký tự.",
+  "password_mismatch": "Mật khẩu xác nhận không khớp.",
+  "invalid_dob": "Ngày sinh không thể lớn hơn ngày hiện tại.",
+  "back": "Quay lại",
+  "update_profile": "Cập Nhật Thông Tin",
+  "complete": "Hoàn tất",
+  "birthday_required": "Vui lòng chọn ngày sinh."
 }
