translate supplier - completed

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -248,6 +248,63 @@
     "detail_title": "Supply Request Details",
     "updated_at": "Updated At",
     "exceed_quantity": "Quantity must not exceed {{quantity}}!",
-    "must_divisible_by_10": "Quantity must be divisible by 10!"
+    "must_divisible_by_10": "Quantity must be divisible by 10!",
+    "create_title": "Create Supply Request",
+    "remaining_quantity": "Remaining quantity:",
+    "request_price": "Unit price:",
+    "time_left": "Time left:",
+    "create_button": "Create",
+    "material_name": "Material name:",
+    "your_quantity": "Your supplied quantity:",
+    "delivery_time": "Delivery time:",
+    "system_note": "System note:",
+    "your_note": "Your note:",
+    "send_request": "Send Request",
+    "no_data": "None",
+    "select_order_warning": "Please select an order!",
+    "success_create": "Supply request created successfully!",
+    "failed_create": "Failed to create supply request!",
+    "note_length_error": "Note must not exceed 2000 characters!",
+    "delivery_address": "Delivery Address",
+    "selected_order_info": "Selected Order Information",
+    "expired_receive_time": "Receiving time has expired",
+    "expired": "Expired"
+  },
+  "historyProvideOrder": {
+    "title": "History of Fuel Supply Orders",
+    "loading": "Loading data...",
+    "itemName": "Item Name",
+    "quantity": "Quantity (kg)",
+    "unitPrice": "Unit Price (VND/kg)",
+    "totalPrice": "Total Price",
+    "status": "Status",
+    "actions": "Actions",
+    "viewDetail": "View Fuel Request Details",
+    "note": "Note",
+    "close": "Close",
+    "noData": "No data available."
+  },
+  "historyHarvestRequestOrder": {
+    "title": "HARVEST REQUEST HISTORY",
+    "loading": "Loading data...",
+    "itemName": "Request Name",
+    "quantity": "Quantity",
+    "unitPrice": "Price per Kg",
+    "totalPrice": "Total Price",
+    "status": "Status",
+    "actions": "Actions",
+    "viewDetail": "View Harvest Request Details",
+    "note": "Note",
+    "close": "Close",
+    "noData": "No data available.",
+    "requestName": "Request Name",
+    "quantityKg": "Quantity (Kg)",
+    "unitPriceLabel": "Unit Price (VNĐ/Kg)",
+    "totalPriceLabel": "Total Price",
+    "address": "Pickup Address",
+    "noteLabel": "Note",
+    "statusLabel": "Status",
+    "completed": "Completed",
+    "viewRequestDetails": "View Request Details"
   }
 }
