--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -245,6 +245,63 @@
     "detail_title": "Chi Tiết Đơn Cung Cấp",
     "updated_at": "Ngày Cập Nhật",
     "exceed_quantity": "Số lượng không được vượt quá {{quantity}}!",
-    "must_divisible_by_10": "Số lượng phải chia hết cho 10!"
+    "must_divisible_by_10": "Số lượng phải chia hết cho 10!",
+    "create_title": "Tạo Đơn Cung Cấp Hàng",
+    "remaining_quantity": "Số lượng còn:",
+    "request_price": "Đơn giá:",
+    "time_left": "Thời gian còn lại:",
+    "create_button": "Tạo đơn",
+    "material_name": "Tên nguyên liệu:",
+    "your_quantity": "Số lượng bạn cung cấp:",
+    "delivery_time": "Thời gian nhận hàng:",
+    "system_note": "Ghi chú hệ thống:",
+    "your_note": "Ghi chú của bạn:",
+    "send_request": "Gửi Yêu Cầu",
+    "no_data": "Không có",
+    "select_order_warning": "Vui lòng chọn đơn hàng!",
+    "success_create": "Tạo đơn cung cấp thành công!",
+    "failed_create": "Tạo đơn thất bại!",
+    "note_length_error": "Số lượng không được vượt quá 2000 ký tự!",
+    "delivery_address": "Địa chỉ giao hàng",
+    "selected_order_info": "Thông tin Đơn Hàng Đã Chọn",
+    "expired_receive_time": "Đã hết thời gian nhận đơn",
+    "expired": "Đã hết hạn"
+  },
+  "historyProvideOrder": {
+    "title": "Lịch Sử Đơn Cung Cấp Nguyên Liệu",
+    "loading": "Đang tải dữ liệu...",
+    "itemName": "Tên mặt hàng",
+    "quantity": "Số lượng (kg)",
+    "unitPrice": "Giá mỗi đơn vị (VNĐ)",
+    "totalPrice": "Tổng giá",
+    "status": "Trạng thái",
+    "actions": "Hành động",
+    "viewDetail": "Xem chi tiết yêu cầu thu nguyên liệu",
+    "note": "Ghi chú",
+    "close": "Đóng",
+    "noData": "Không có dữ liệu."
+  },
+  "historyHarvestRequestOrder": {
+    "title": "LỊCH SỬ YÊU CẦU THU NGUYÊN LIỆU",
+    "loading": "Đang tải dữ liệu...",
+    "itemName": "Tên yêu cầu",
+    "quantity": "Số lượng",
+    "unitPrice": "Giá mỗi Kg",
+    "totalPrice": "Tổng giá",
+    "status": "Trạng thái",
+    "actions": "Hành động",
+    "viewDetail": "Xem chi tiết yêu cầu thu nguyên liệu",
+    "note": "Ghi chú",
+    "close": "Đóng",
+    "noData": "Không có dữ liệu.",
+    "requestName": "Tên yêu cầu",
+    "quantityKg": "Số lượng (Kg)",
+    "unitPriceLabel": "Giá mỗi đơn vị (VNĐ/Kg)",
+    "totalPriceLabel": "Tổng giá",
+    "address": "Địa chỉ lấy hàng",
+    "noteLabel": "Ghi chú",
+    "statusLabel": "Trạng thái",
+    "completed": "Hoàn thành",
+    "viewRequestDetails": "Xem chi tiết yêu cầu"
   }
 }
